fix vertical alignment on long buttons

--- a/web/src/css/box.css
+++ b/web/src/css/box.css
@@ -66,7 +66,7 @@
 .box-link img {
   width: auto;
   @apply block;
-  height: 0.375em;
+  height: 0.5em;
   @apply relative;
 }
 
